# MenuLens

./: .gitignore  README.md  STREAMLIT_GUIDE.md  pyproject.toml  run_backend.sh  run_streamlit.sh  streamlit_app.py
backend/: .env.example  .gitignore  requirements.txt
backend/app/: main.py
backend/app/core/: ai_service.py  config.py  image_search_service.py
backend/app/db/: database.py
backend/app/models/: allergen.py  menu_item.py  user.py
backend/app/schemas/: menu.py  user.py
